# gimpisep-gimp-like-inc

BetterThanGIMP/: CMakeLists.txt
BetterThanGIMP/src/: main.cpp
BetterThanGIMP/src/component/Input/: Input.cpp  Input.h
BetterThanGIMP/src/component/Slider/: Slider.cpp  Slider.h
BetterThanGIMP/src/display/: Window.cpp  Window.h
BetterThanGIMP/src/display/drawingMenu/: DrawingMenu.cpp  DrawingMenu.h
BetterThanGIMP/src/display/menuBar/: MenuBar.cpp  MenuBar.h
BetterThanGIMP/src/display/optionsMenu/: OptionsMenu.cpp  OptionsMenu.h
BetterThanGIMP/src/display/toolMenu/: ToolMenu.cpp  ToolMenu.h
BetterThanGIMP/src/display/workspace/: Workspace.cpp  Workspace.h
BetterThanGIMP/src/filters/: ImageManipulation.cpp  ImageManipulation.h  contrast_image.cpp  contrast_image_students.cpp  cropAndResize_students.cpp  gray_image.cpp  students_blur.cpp  students_gaussian.cpp
BetterThanGIMP/src/manipulations/: Manipulation.cpp  Manipulation.h  brightness.cpp  cannyEdge.cpp  dilatation.cpp  erosion.cpp  panorama.cpp  resizing.cpp
BetterThanGIMP/src/manipulations/Blur/: Blur.cpp  Blur.h
BetterThanGIMP/src/manipulations/Brightness/: Brightness.cpp  Brightness.h
BetterThanGIMP/src/manipulations/Brush/: Brush.cpp  Brush.h
BetterThanGIMP/src/manipulations/CannyEdge/: CannyEdge.cpp  CannyEdge.h
BetterThanGIMP/src/manipulations/Contrast/: Contrast.cpp  Contrast.h
BetterThanGIMP/src/manipulations/Dilatation/: Dilatation.cpp  Dilatation.h
BetterThanGIMP/src/manipulations/Erosion/: Erosion.cpp  Erosion.h
BetterThanGIMP/src/manipulations/Monochrome/: Monochrome.cpp  (+1 more)
(+12 files in other folders)
